--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
   <string name="app_name">Nav Demo</string>
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
   <string name="text_content_hint">Text Content</string>
   <string name="b_label">B</string>
   <string name="c_label">C</string>
@@ -8,5 +10,5 @@
   <string name="fragment_b_label">Fragment B</string>
   <string name="fragment_c_label">Fragment C</string>
   <string name="fragment_d_label">Fragment D</string>
-  <string name="hello_blank_fragment">Hello Blank Fragment</string>
+  <string name="shared_content_hint">Shared Content</string>
 </resources>
